methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:2: error: not found: value versLavant
def move(nbPas: Int,versLAvant: Boolean){if (versLavant){avance(nbPas)};else{recule(nbPas)}} 
                                             ^