methods.args.MethodsArgs.scala.code
def move(nbPas: Int,versLAvant: Boolean){if (versLavant){avance(nbPas)};else{recule(nbPas)}}